--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 
-      <link rel="stylesheet" href="/home/rishabh/first-app/style.css">
+      <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -47,7 +47,7 @@
 
 
 
-    <script  src="/home/rishabh/first-app/index.js"></script>
+    <script  src="index.js"></script>
 
 
 
